# cflex

./: ARCHITECTURE_ANALYSIS.md  README.md  cflex.c  cflex.h  cflex_generated.c  cflex_generated.h  generate_vs_clang.bat  generate_vs_solution.bat  program  program.c  program_types.h
cflex/: AGENTS.md  CMakeLists.txt  README.md
cflex/src/cflex/: cflex.c  cflex.h  cflex_generated.c  cflex_implementation.c  cflex_implementation.h  cflex_macros.h
cflex/src/cflex/internal/: cflex_internal.h  cflex_parser.c
cflex/src/cflex_build/: cflex_build.c  cflex_build.h
cflex/src/cflex_build/internal/: cflex_internal.h  cflex_output.c  cflex_parse.c  cflex_parse_enum.c  cflex_parse_struct.c  cflex_parse_util.c  cflex_platform.c  cflex_scan.c  cflex_std.c  cflex_string.c
cflex/src/cflex_unit/: cflex_unit.c  cflex_unit_cflex.c  cflex_unit_types.h
cflex/src/example_dll/: example_dll.c  example_dll.h  example_dll_cflex.c
cflex/src/example_dll/modules/module_1/: module_1.c  module_1.h
cflex/src/example_dll/modules/module_2/: module_2.c  module_2.h
cflex/src/example_lib/: example_lib.c  example_lib.h  example_lib_cflex.c
cflex/src/example_lib/modules/module_1/: module_1.c  module_1.h
cflex/src/program/: program.c  program.h  program_cflex.c
